; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_string-util.c_delete_chars.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_string-util.c_delete_chars.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WHITESPACE = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @delete_chars(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %41

11:                                               ; preds = %2
  %12 = load i8*, i8** %5, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %16, label %14

14:                                               ; preds = %11
  %15 = load i8*, i8** @WHITESPACE, align 8
  store i8* %15, i8** %5, align 8
  br label %16

16:                                               ; preds = %14, %11
  %17 = load i8*, i8** %4, align 8
  store i8* %17, i8** %6, align 8
  %18 = load i8*, i8** %4, align 8
  store i8* %18, i8** %7, align 8
  br label %19

19:                                               ; preds = %35, %16
  %20 = load i8*, i8** %6, align 8
  %21 = load i8, i8* %20, align 1
  %22 = icmp ne i8 %21, 0
  br i1 %22, label %23, label %38

23:                                               ; preds = %19
  %24 = load i8*, i8** %5, align 8
  %25 = load i8*, i8** %6, align 8
  %26 = load i8, i8* %25, align 1
  %27 = call i64 @strchr(i8* %24, i8 signext %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %23
  br label %35

30:                                               ; preds = %23
  %31 = load i8*, i8** %6, align 8
  %32 = load i8, i8* %31, align 1
  %33 = load i8*, i8** %7, align 8
  %34 = getelementptr inbounds i8, i8* %33, i32 1
  store i8* %34, i8** %7, align 8
  store i8 %32, i8* %33, align 1
  br label %35

35:                                               ; preds = %30, %29
  %36 = load i8*, i8** %6, align 8
  %37 = getelementptr inbounds i8, i8* %36, i32 1
  store i8* %37, i8** %6, align 8
  br label %19

38:                                               ; preds = %19
  %39 = load i8*, i8** %7, align 8
  store i8 0, i8* %39, align 1
  %40 = load i8*, i8** %4, align 8
  store i8* %40, i8** %3, align 8
  br label %41

41:                                               ; preds = %38, %10
  %42 = load i8*, i8** %3, align 8
  ret i8* %42
}

declare dso_local i64 @strchr(i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
